RESOLVED FIXED293991
Unreviewed VisionOS build fix after 295774@main
https://bugs.webkit.org/show_bug.cgi?id=293991
Summary Unreviewed VisionOS build fix after 295774@main
Chris Dumez
Reported 2025-06-03 16:17:48 PDT
Fix VisionOS build after 295774@main.
Attachments
Chris Dumez
Comment 1 2025-06-03 16:17:49 PDT
Chris Dumez
Comment 2 2025-06-03 16:18:19 PDT
EWS
Comment 3 2025-06-03 16:25:37 PDT
Committed 295782@main (e668da6947b3): <https://commits.webkit.org/295782@main> Reviewed commits have been landed. Closing PR #46287 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.