Unreviewed VisionOS build fix after 295774@main https://bugs.webkit.org/show_bug.cgi?id=293991 rdar://152536021

* Source/WebKit/UIProcess/Cocoa/PlaybackSessionManagerProxy.mm:
(WebKit::PlaybackSessionManagerProxy::setVideoReceiverEndpoint):
(WebKit::PlaybackSessionManagerProxy::swapVideoReceiverEndpoints):

Canonical link: https://commits.webkit.org/295782@main